--- a/Sample.FileServer/Sample.FileServer.csproj
+++ b/Sample.FileServer/Sample.FileServer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileServerHandler.cs" />
+    <Compile Include="MimeTypeAssistant.cs" />
     <Compile Include="NodeletProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
